tdf#125424: properly reset temporarily cleared guard

Since the guard is only cleared optionally, most probably the code after
the conditional block is expected to be guarded until the second clear.

Change-Id: I913cb4bff42140da605a6f45414bece419f4a4c8